Tried to fix shifting but gonna have to live with it for now.

--- a/css/adventure.css
+++ b/css/adventure.css
@@ -7,12 +7,6 @@ a{
 a:hover{
 	color: steelBlue;
 }
-
-#sportsPhotos{
-	padding-bottom:20px;
-	margin: 10px;
-	text-align: center;
-}
 h2{
 	font-family: font-family: 'Playfair Display', serif;
 	text-align: left;
